fixed nav overflow

--- a/front-end/src/components/layout/nav/nav.css
+++ b/front-end/src/components/layout/nav/nav.css
@@ -126,10 +126,11 @@ nav {
     }
 
     & > .nav-items {
-      flex-direction: row;
-      justify-content: stretch;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      justify-items: center;
       margin-bottom: 0;
-      gap: 0.5rem;
+      gap: 0.25rem;
 
       & > .nav-item {
         display: grid;
@@ -137,9 +138,13 @@ nav {
         width: 100%;
 
         & > a {
-          width: max-content;
+          width: fit-content;
           flex-direction: column;
           gap: 0.25rem;
+          text-align: center;
+          align-items: center;
+          justify-content: center;
+          border: none;
 
           & > svg {
             width: 1rem;
@@ -155,8 +160,6 @@ nav {
         &.active {
           & > a {
             --color: var(--global-color-accent-2);
-
-            border: none;
           }
         }
       }
